# Notes

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  release.py  requirements.txt  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
cli/: update_toc.py
cli/utils/: constants.py  structure.py  tools.py
docs/: index.md  structure.json  toc.md
docs/.vitepress/: config.mts  constants.ts  docs.ts  head.ts
docs/.vitepress/plugins/: wikilinks.ts
docs/.vitepress/theme/: index.ts  style.css  themeConfig.ts
docs/Algorithm/LeetCode/: 134. 加油站.md  300. 最长上升子序列.md  347.前-k-个高频元素.md  5.最长回文子串.md
docs/Applications/Kubernetes/: k8s runtime endpoints.md
docs/Applications/Maya/: maya插件安装方法.md
docs/Applications/Windows/: windows查找端口占用.md
docs/Domain-Knowledge/Design Pattern/: 状态模式.md
docs/Domain-Knowledge/DevOps/: PVE 安装 OpenWRT.md  PVE 安装 homeassistant.md  PVE 安装 ikuai.md  安装 PVE 系统.md
docs/Domain-Knowledge/Linear Algebra/: Linear Algebra.md
docs/Domain-Knowledge/图形学/: 坐标系&旋转 Conventions.md  旋转的不同表示方式.md
docs/Linux/: Bash脚本中获得脚本文件当前路径.md  Linux 实时内存监控-top,vmstat,free.md  Linux 实时内存监控.md  Linux下多线程下载工具-Axel.md  Linux使终端支持utf8中文字符.md  Linux修改默认shell.md  Linux开发环境setup.md  Linux快速传输大文件-nc.md  Linux批量杀死进程.md  Linux搜索所有文件中的内容.md  Linux新建用户,sudo权限,ssh连接权限.md  Linux新建用户.md  Linux添加对utf8中文字符的支持.md  Linux环境变量设置env, set, export.md  Linux系统访问NAS的文件服务(samba).md  Mackup 同步linux,macos配置.md  Mackup 同步linux配置.md  Neovim安装与配置.md  awscli使用指南.md  wget下载Google Drive共享的文件.md  zsh常用插件.md  自签名SSL证书-openssl.md
docs/Linux/ArchLinux/: archlinux简单安装教程.md
docs/Linux/CentOS/: CentOS 7 安装升级Git版本.md  CentOS 7 常用工具包安装.md  CentOS 7 开放端口.md  CentOS 配置国内源.md
docs/Linux/SSH/: SSH配置心跳信号防止断开连接.md  index.md  ssh开启隧道.md  使用autossh自动重连ssh.md  创建SSH密钥对并使用密钥登录.md
docs/Linux/Vim/: Neovim安装与配置.md  index.md  vim插件管理 - vim-plug.md  vim的filetype plugins配置.md  vim配置.md
docs/Linux/nginx/: nginx 配置 examples.md  nginx 隐藏响应头的版本信息.md
docs/Linux/shell/: Fish Shell 安装.md  fish shell安装.md
docs/MacOS/: Homebrew的安装、换源和卸载.md  MacBook上手初始配置.md  MacOS 配置定时任务.md  index.md  问题排查记录-开启VPN后,命令行访问境外网站失败.md
docs/Programming/Code-Quality/: 代码整洁之道-2-有意义的命名.md
docs/Programming/Database/: CouchDB安装.md  SQL - INSERT INTO SELECT.md  SQL中EXISTS和IN语句的区别.md  SQL利用row_number()查询分组排序后的一条或多条数据.md  SQL批量从A表插入数据到B表.md  SQL查询优化经验.md
docs/Windows/: index.md  powershell 开启补全功能.md  windows 平台好用的软件推荐.md  windows 平台常用路径缩写.md  windows平台使用nushell终端.md  windows平台常用路径缩写.md  windows建立软链接.md  windows查找端口占用.md  winget 国内源.md  winget更换国内源.md
docs/算法-Algorithm/: 布隆过滤器(Bloom Filter).md
docs/软件工具应用-Applications/: alacritty配置.md  pyassimp安装.md
tests/: test_page_info.py
tools/: constants.py  release.py  update_toc.py
tools/utils/: structure.py
(+299 files in other folders)
