[project]
name = "Notes"
version = "0.1.0"
description = "Personal notes and tools for managing notes."
readme = "README.md"
authors = [{ name = "maoXyzt", email = "edwardyzt@gmail.com" }]
requires-python = ">=3.11"
license = "Apache-2.0" # https://spdx.org/licenses/
dependencies = [
  "pydantic>=2.11.4",
  "pydantic-settings>=2.9.1",
  "pypinyin>=0.54.0",
  "python-frontmatter>=1.1.0",
  "rich>=14.0.0",
  "typer>=0.15.3",
]

[project.scripts]
update-toc = "cli.update_toc:main"

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pytest>=8.0", "ruff>=0.12.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
